OpenAPI validation for integration tests
- remove station.txt endpoints
