# src/main/resources/static/openapi.yaml
@@ -7,7 +7,7 @@ info:
   license:
     name: MIT
     url: https://github.com/RailwayStations/RSAPI/blob/master/LICENSE.txt
-  version: "20220402.2100"
+  version: "20220410.1600"
 servers:
 - url: https://api.railway-stations.org/
 tags:
@@ -74,9 +74,7 @@ paths:
           content:
             application/gpx+xml:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Station'
+                type: string
             application/json:
               schema:
                 type: array
@@ -84,9 +82,61 @@ paths:
                   $ref: '#/components/schemas/Station'
             text/plain:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Station'
+                type: string
+        404:
+          description: Country not found
+          content: {}
+  /{country}/stations.gpx:
+    get:
+      summary: Finds railway stations by various query criteria as GPX
+      parameters:
+        - name: country
+          in: path
+          description: filter by country code
+          required: true
+          schema:
+            type: string
+        - name: hasPhoto
+          in: query
+          description: filter by photo availalbe/missing
+          schema:
+            type: boolean
+        - name: photographer
+          in: query
+          description: filter by nickname of a photographer
+          schema:
+            type: string
+        - name: maxDistance
+          in: query
+          description: filter by max distance from the coordinates given by lat and
+            lon
+          schema:
+            type: integer
+            format: int64
+        - name: lat
+          in: query
+          description: latitute of the coordinates to filter by max distance
+          schema:
+            type: number
+            format: double
+        - name: lon
+          in: query
+          description: longitude of the coordinates to filter by max distance
+          schema:
+            type: number
+            format: double
+        - name: active
+          in: query
+          description: filter on active/inactive stations
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/gpx+xml:
+              schema:
+                type: string
         404:
           description: Country not found
           content: {}
@@ -141,9 +191,7 @@ paths:
           content:
             application/gpx+xml:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Station'
+                type: string
             application/json:
               schema:
                 type: array
@@ -151,9 +199,59 @@ paths:
                   $ref: '#/components/schemas/Station'
             text/plain:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Station'
+                type: string
+  /stations.gpx:
+    get:
+      summary: Finds railway stations by various query criteria
+      parameters:
+        - name: country
+          in: query
+          description: filter by country code
+          schema:
+            type: array
+            items:
+              type: string
+        - name: hasPhoto
+          in: query
+          description: filter by photo availalbe/missing
+          schema:
+            type: boolean
+        - name: photographer
+          in: query
+          description: filter by nickname of a photographer
+          schema:
+            type: string
+        - name: maxDistance
+          in: query
+          description: filter by max distance from the coordinates given by lat and
+            lon
+          schema:
+            type: integer
+            format: int64
+        - name: lat
+          in: query
+          description: latitute of the coordinates to filter by max distance
+          schema:
+            type: number
+            format: double
+        - name: lon
+          in: query
+          description: longitude of the coordinates to filter by max distance
+          schema:
+            type: number
+            format: double
+        - name: active
+          in: query
+          description: filter on active/inactive stations
+          schema:
+            type: boolean
+      responses:
+        200:
+          description: successful operation
+          content:
+            application/gpx+xml:
+              schema:
+                type: string
   /{country}/stations/{id}:
     get:
       summary: Find a railway station by its ID
